--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.78.0"
+    "react-icons": "^5.3.0",
+    "sass": "^1.78.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
